--- a/canadiansimulator/index.html
+++ b/canadiansimulator/index.html
@@ -1,5 +1,7 @@
 local Rayfield = loadstring(game:HttpGet('https://sirius.menu/rayfield'))()
 
+-- use this skidded script for maple state sim and copies of can sim
+-- don't recommend using this for the original game as its exploited enough
 local Window = Rayfield:CreateWindow({
     Name = "canadian sim larp destroy 14.88",
     Icon = 0,
