--- a/index.html
+++ b/index.html
@@ -156,6 +156,7 @@
         <a href="https://discordapp.com/users/899513049189326898" target="_blank">Discord</a>
         <a href="https://discord.gg/jqAGuECSTG" target="_blank">Discord Server</a>
         <a href="mailto:admin@lezmoment.com" target="_blank">Email</a>
+        <a href="https://github.com/lezmomento" target="_blank">Github</a>
       </div>
     </section>
 
@@ -163,6 +164,8 @@
   <h3>License & Code</h3>
   <p>
     Everything I build (and share) is <strong>public domain</strong> via the <a href="https://unlicense.org/" target="_blank" style="color: var(--accent);">The Unlicense</a>.
+  <p>
+    “All software is open source if you can read assembly.” - Terry A. Davis
   </p>
 </section>
 
