--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
       <h3>Links & Socials</h3>
       <div class="socials">
         <a href="https://discordapp.com/users/899513049189326898" target="_blank">Discord</a>
-        <a href="https://discord.gg/jqAGuECSTG" target="_blank">Discord Server</a>
+        <a href="https://discord.gg/JfdQM4ccqC" target="_blank">Discord Server</a>
         <a href="mailto:admin@lezmoment.com" target="_blank">Email</a>
         <a href="https://github.com/lezmomento" target="_blank">Github</a>
       </div>
